# emliveplayer

./: README.md
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/aar/: medialivelib-release.aar
android/app/: build.gradle  eastmoney.keystore  log4j.properties
android/app/libs/: vehook-release.aar
android/app/src/main/: AndroidManifest.xml
android/emlibso/: build.gradle
android/emlibso/src/main/: AndroidManifest.xml
android/emlibso/src/main/cpp/: CMakeLists.txt
android/emlibso/src/main/cpp/ijkplayer/: CMakeLists.txt  ijknative
android/emlivesdkandroid/: build.gradle  gradle.properties  proguard-rules.pro
android/emlivesdkandroid/src/main/: AndroidManifest.xml
android/emlivesdkandroid/src/main/cpp/: CMakeLists.txt  jni_interface.cpp
common/: README.md
common/ffmpeg-build/android/: compile-ffmpeg.sh  compile-openssl.sh
common/ffmpeg-build/android/tools/: do-compile-ffmpeg.sh  do-compile-openssl.sh  do-cp-ffmpegsrc.sh  do-cp-opensslsrc.sh  do-detect-env.sh
common/ffmpeg-build/config/: module-lite.sh  module.sh  module_all.sh
common/ffmpeg-build/ffmpeg-src/: CMakeLists.txt  Changelog  Makefile  configure  ffmpeg.c  ffmpeg.h  ffmpeg_cuvid.c  ffmpeg_dxva2.c  ffmpeg_filter.c  ffmpeg_opt.c  ffmpeg_qsv.c  ffmpeg_vaapi.c  ffmpeg_vdpau.c  ffmpeg_videotoolbox.c  ffplay.c  ffprobe.c  ffserver.c  ffserver_config.c  ffserver_config.h
common/ffmpeg-build/ffmpeg-src/compat/: strtod.c  w32pthreads.h
common/ffmpeg-build/ffmpeg-src/doc/: APIchanges  Makefile  codecs.texi  config.texi  demuxers.texi  developer.texi  devices.texi  faq.texi  ffmpeg.txt  fftools-common-opts.texi  filters.texi  formats.texi  multithreading.txt  muxers.texi  protocols.texi  writing_filters.txt
common/ffmpeg-build/ffmpeg-src/libavcodec/: 012v.c  4xm.c  8bps.c  8svx.c  a64multienc.c  aac.h  aac_ac3_parser.c  aac_ac3_parser.h  aac_adtstoasc_bsf.c  aac_parser.c  aacadtsdec.c  aacadtsdec.h  aaccoder.c  aaccoder_twoloop.h  aacdec.c  aacdec_fixed.c  aacdec_template.c  aacenc.c  aacenc.h  aacenc_is.c  aacenc_is.h  aacenc_ltp.c  aacenc_ltp.h  aacenc_pred.c  aacenc_pred.h  aacenc_quantization.h  aacenc_tns.c  aacenc_tns.h  aacenc_utils.h  aacenctab.c  aacenctab.h  aacps.c  aacps.h  aacpsdsp.h  aacpsdsp_template.c  aacpsy.c  aacsbr.c  aacsbr.h  aacsbr_fixed.c  aacsbr_template.c  (+847 more)
common/ffmpeg-build/ffmpeg-src/libavformat/: 3dostr.c  4xm.c  Makefile  a64.c  aacdec.c  aadec.c  ac3dec.c  acm.c  act.c  adp.c  ads.c  adtsenc.c  adxdec.c  aea.c  afc.c  aiff.h  aiffdec.c  aiffenc.c  aixdec.c  allformats.c  amr.c  anm.c  apc.c  ape.c  apetag.c  apetag.h  apngdec.c  apngenc.c  aqtitledec.c  asf.h  asfcrypt.c  asfdec_f.c  asfdec_o.c  asfenc.c  assdec.c  assenc.c  ast.c  ast.h  astdec.c  astenc.c  (+463 more)
common/ffmpeg-build/ffmpeg-src/libavresample/: audio_convert.c  audio_data.c  audio_data.h  audio_mix.c  audio_mix_matrix.c  avresample.h  dither.c  internal.h  options.c  resample.c  resample.h  utils.c
common/ffmpeg-build/ffmpeg-src/libavutil/: adler32.c  aes.c  aes_ctr.c  aes_ctr.h  application.c  atomic.c  atomic.h  atomic_gcc.h  atomic_suncc.h  atomic_win32.h  audio_fifo.c  audio_fifo.h  avstring.c  base64.c  blowfish.c  blowfish.h  bprint.c  bprint.h  buffer.c  buffer_internal.h  camellia.c  cast5.c  cast5.h  channel_layout.c  color_utils.c  color_utils.h  cpu.c  cpu_internal.h  crc.c  crc.h  des.c  (+87 more)
common/ffmpeg-build/ios/: compile-ffmpeg.sh  compile-openssl.sh
common/ijknative/ffmpeg/: Android.mk
common/ijknative/ijkmedia/: CMakeLists.txt
common/ijknative/ijkmedia/ijkj4a/j4a/class/android/media/: MediaCodec.c
common/ijknative/ijkmedia/ijkj4a/j4a/class/tv/danmaku/ijk/media/player/: IjkMediaPlayer.c  IjkMediaPlayer.h
common/ijknative/ijkmedia/ijkj4a/java/tv/danmaku/ijk/media/player/: IjkMediaPlayer.java
common/ijknative/ijkmedia/ijkplayer/: Android.mk  ff_cmdutils.c  ff_cmdutils.h  ff_ffinc.h  ff_ffmsg.h  ff_ffmsg_queue.h  ff_ffpipeline.c  ff_ffplay.c  ff_ffplay.h  ff_ffplay_def.h  ff_ffplay_options.h  ffplay_format_def.h  ijkmeta.c  ijkmeta.h  ijkplayer.c  ijkplayer.h  ijkplayer_internal.h  ijksonic.c  ijksonic.h  ijkutil.c  ijkutil.h
common/ijknative/ijkmedia/ijkplayer/android/: ffmpeg_api_jni.c  ijkplayer_android.c  ijkplayer_android.h  ijkplayer_android_def.h  ijkplayer_jni.c
common/ijknative/ijkmedia/ijkplayer/android/pipeline/: ffpipeline_android.c  ffpipeline_android.h  ffpipenode_android_mediacodec_vdec.c  mpeg4_esds.h
common/ijknative/ijkmedia/ijkplayer/ijkavformat/: allformats.c  ijkasync.c  ijklivehook.c  ijklongurl.c  ijkmediadatasource.c  ijksegment.c  ijkurlhook.c
common/ijknative/ijkmedia/ijkplayer/pipeline/: ffpipenode_ffplay_vdec.c
common/ijknative/ijkmedia/ijksdl/: Android.mk  ijksdl_aout.h  ijksdl_audio.h  ijksdl_egl.c  ijksdl_gles2.h  ijksdl_log.c  ijksdl_log.h  ijksdl_thread.c  ijksdl_timer.c  ijksdl_timer.h  ijksdl_vout.c  ijksdl_vout.h
common/ijknative/ijkmedia/ijksdl/android/: android_audiotrack.c  ijksdl_android_jni.c  ijksdl_android_jni.h  ijksdl_aout_android_audiotrack.c  ijksdl_codec_android_mediacodec.c  ijksdl_codec_android_mediacodec_java.c  ijksdl_vout_android_nativewindow.c  ijksdl_vout_android_nativewindow.h
common/ijknative/ijkmedia/ijksdl/fastimage/: fastimage_vout.c  fastimage_vout.h
common/ijknative/ijkmedia/ijksdl/ffmpeg/: ijksdl_vout_overlay_ffmpeg.c
common/ijknative/ijkmedia/ijksdl/gles2/: internal.h  renderer.c
common/ijknative/ijkmedia/ijkyuv/: Android.mk
ios/EMLiveSDK/: make.sh
ios/EMLiveSDK/EMLiveSDKIOS/: EMLivePlayConfig.h  EMLivePlayConfig.m  EMLivePlayListener.h  EMLivePlayer.h  EMLivePlayer.m  EMLivePlayer2.h  EMLivePlayer2.m  EMLiveSDK.pch  EMLiveSDKEventDef.h  EMLiveSDKIOS.h  EMLiveSDKTypeDef.h  EMParameter.h  EMParameter.m  EMVoicePlayer.h  EMVoicePlayer.m
ios/EMLiveSDK/EMLiveSDKIOS.xcodeproj/: project.pbxproj
ios/demo/: Podfile
ios/demo/playerdemo/: AppDelegate.h  AppDelegate.m  Info.plist  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  macrodef.h  main.m
ios/demo/playerdemo.xcodeproj/: project.pbxproj
ios/framework/medialiveimage.framework/: Info.plist
(+484 files in other folders)
