cmake_minimum_required(VERSION 3.7)
project(ijkmedia)

set(CMAKE_CXX_STANDARD 11)

include_directories(
        ../../../ffmpeg-build/android/build/ffmpeg-armv5/output/include
        ml_vendor/include
        ijkj4a
        .
        ..
        D:\\Project\\android-ndk-r15c\\sysroot\\usr\\include
        /Users/nintendopsp/Library/Android/ndk/sysroot/usr/include)

set(SOURCE_FILES
        ijkj4a/j4a/class/android/media/AudioTrack.c
        ijkj4a/j4a/class/android/media/AudioTrack.h
        ijkj4a/j4a/class/android/media/MediaCodec.c
        ijkj4a/j4a/class/android/media/MediaCodec.h
        ijkj4a/j4a/class/android/media/MediaFormat.c
        ijkj4a/j4a/class/android/media/MediaFormat.h
        ijkj4a/j4a/class/android/media/PlaybackParams.c
        ijkj4a/j4a/class/android/media/PlaybackParams.h
        ijkj4a/j4a/class/android/os/Build.c
        ijkj4a/j4a/class/android/os/Build.h
        ijkj4a/j4a/class/android/os/Bundle.c
        ijkj4a/j4a/class/android/os/Bundle.h
        ijkj4a/j4a/class/java/nio/Buffer.c
        ijkj4a/j4a/class/java/nio/Buffer.h
        ijkj4a/j4a/class/java/nio/ByteBuffer.c
        ijkj4a/j4a/class/java/nio/ByteBuffer.h
        ijkj4a/j4a/class/java/util/ArrayList.c
        ijkj4a/j4a/class/java/util/ArrayList.h
        ijkj4a/j4a/class/tv/danmaku/ijk/media/player/misc/IMediaDataSource.c
        ijkj4a/j4a/class/tv/danmaku/ijk/media/player/misc/IMediaDataSource.h
        ijkj4a/j4a/class/tv/danmaku/ijk/media/player/IjkMediaPlayer.c
        ijkj4a/j4a/class/tv/danmaku/ijk/media/player/IjkMediaPlayer.h
        ijkj4a/j4a/j4a_allclasses.c
        ijkj4a/j4a/j4a_allclasses.h
        ijkj4a/j4a/j4a_allclasses.include.h
        ijkj4a/j4a/j4a_allclasses.loader.h
        ijkj4a/j4a/j4a_base.c
        ijkj4a/j4a/j4a_base.h
        ijkj4a/j4au/class/android/media/AudioTrack.util.c
        ijkj4a/j4au/class/android/media/AudioTrack.util.h
        ijkj4a/j4au/class/java/nio/ByteBuffer.util.c
        ijkj4a/j4au/class/java/nio/ByteBuffer.util.h
        ijkplayer/android/pipeline/ffpipeline_android.c
        ijkplayer/android/pipeline/ffpipeline_android.h
        ijkplayer/android/pipeline/ffpipenode_android_mediacodec_vdec.c
        ijkplayer/android/pipeline/ffpipenode_android_mediacodec_vdec.h
        ijkplayer/android/pipeline/h264_nal.h
        ijkplayer/android/pipeline/hevc_nal.h
        ijkplayer/android/pipeline/mpeg4_esds.h
        ijkplayer/android/ffmpeg_api_jni.c
        ijkplayer/android/ffmpeg_api_jni.h
        ijkplayer/android/ijkplayer_android.c
        ijkplayer/android/ijkplayer_android.h
        ijkplayer/android/ijkplayer_android_def.h
        ijkplayer/android/ijkplayer_jni.c
        ijkplayer/ijkavformat/allformats.c
        ijkplayer/ijkavformat/ijkasync.c
        ijkplayer/ijkavformat/ijkavformat.h
        ijkplayer/ijkavformat/ijklivehook.c
        ijkplayer/ijkavformat/ijklongurl.c
        ijkplayer/ijkavformat/ijkmediadatasource.c
        ijkplayer/ijkavformat/ijksegment.c
        ijkplayer/ijkavformat/ijkurlhook.c
        ijkplayer/ijkavutil/opt.h
        ijkplayer/pipeline/ffpipeline_ffplay.c
        ijkplayer/pipeline/ffpipeline_ffplay.h
        ijkplayer/pipeline/ffpipenode_ffplay_vdec.c
        ijkplayer/pipeline/ffpipenode_ffplay_vdec.h
        ijkplayer/config.h
        ijkplayer/ff_cmdutils.c
        ijkplayer/ff_cmdutils.h
        ijkplayer/ff_fferror.h
        ijkplayer/ff_ffinc.h
        ijkplayer/ff_ffmsg.h
        ijkplayer/ff_ffmsg_queue.h
        ijkplayer/ff_ffpipeline.c
        ijkplayer/ff_ffpipeline.h
        ijkplayer/ff_ffpipenode.c
        ijkplayer/ff_ffpipenode.h
        ijkplayer/ff_ffplay.c
        ijkplayer/ff_ffplay.h
        ijkplayer/ff_ffplay_debug.h
        ijkplayer/ff_ffplay_def.h
        ijkplayer/ff_ffplay_options.h
        ijkplayer/ijkmeta.c
        ijkplayer/ijkmeta.h
        ijkplayer/ijkplayer.c
        ijkplayer/ijkplayer.h
        ijkplayer/ijkplayer_internal.h
        ijkplayer/version.h
        ijksdl/android/android_audiotrack.c
        ijksdl/android/android_audiotrack.h
        ijksdl/android/android_nativewindow.c
        ijksdl/android/android_nativewindow.h
        ijksdl/android/ijksdl_android.h
        ijksdl/android/ijksdl_android_jni.c
        ijksdl/android/ijksdl_android_jni.h
        ijksdl/android/ijksdl_aout_android_audiotrack.c
        ijksdl/android/ijksdl_aout_android_audiotrack.h
        ijksdl/android/ijksdl_aout_android_opensles.c
        ijksdl/android/ijksdl_aout_android_opensles.h
        ijksdl/android/ijksdl_codec_android_mediacodec.c
        ijksdl/android/ijksdl_codec_android_mediacodec.h
        ijksdl/android/ijksdl_codec_android_mediacodec_dummy.c
        ijksdl/android/ijksdl_codec_android_mediacodec_dummy.h
        ijksdl/android/ijksdl_codec_android_mediacodec_internal.c
        ijksdl/android/ijksdl_codec_android_mediacodec_internal.h
        ijksdl/android/ijksdl_codec_android_mediacodec_java.c
        ijksdl/android/ijksdl_codec_android_mediacodec_java.h
        ijksdl/android/ijksdl_codec_android_mediadef.c
        ijksdl/android/ijksdl_codec_android_mediadef.h
        ijksdl/android/ijksdl_codec_android_mediaformat.c
        ijksdl/android/ijksdl_codec_android_mediaformat.h
        ijksdl/android/ijksdl_codec_android_mediaformat_internal.h
        ijksdl/android/ijksdl_codec_android_mediaformat_java.c
        ijksdl/android/ijksdl_codec_android_mediaformat_java.h
        ijksdl/android/ijksdl_inc_internal_android.h
        ijksdl/android/ijksdl_vout_android_nativewindow.c
        ijksdl/android/ijksdl_vout_android_nativewindow.h
        ijksdl/android/ijksdl_vout_android_surface.c
        ijksdl/android/ijksdl_vout_android_surface.h
        ijksdl/android/ijksdl_vout_overlay_android_mediacodec.c
        ijksdl/android/ijksdl_vout_overlay_android_mediacodec.h
        ijksdl/dummy/ijksdl_dummy.h
        ijksdl/dummy/ijksdl_vout_dummy.c
        ijksdl/dummy/ijksdl_vout_dummy.h
        ijksdl/fastimage/fastimage_vout.c
        ijksdl/fastimage/fastimage_vout.h
        ijksdl/ffmpeg/abi_all/image_convert.c
        ijksdl/ffmpeg/ijksdl_image_convert.h
        ijksdl/ffmpeg/ijksdl_inc_ffmpeg.h
        ijksdl/ffmpeg/ijksdl_vout_overlay_ffmpeg.c
        ijksdl/ffmpeg/ijksdl_vout_overlay_ffmpeg.h
        ijksdl/gles2/fsh/rgb.fsh.c
        ijksdl/gles2/fsh/yuv420p.fsh.c
        ijksdl/gles2/fsh/yuv420sp.fsh.c
        ijksdl/gles2/fsh/yuv444p10le.fsh.c
        ijksdl/gles2/vsh/mvp.vsh.c
        ijksdl/gles2/color.c
        ijksdl/gles2/common.c
        ijksdl/gles2/internal.h
        ijksdl/gles2/renderer.c
        ijksdl/gles2/renderer_rgb.c
        ijksdl/gles2/renderer_yuv420p.c
        ijksdl/gles2/renderer_yuv420sp.c
        ijksdl/gles2/renderer_yuv444p10le.c
        ijksdl/gles2/shader.c
        ijksdl/ijksdl.h
        ijksdl/ijksdl_aout.c
        ijksdl/ijksdl_aout.h
        ijksdl/ijksdl_aout_internal.h
        ijksdl/ijksdl_audio.c
        ijksdl/ijksdl_audio.h
        ijksdl/ijksdl_class.h
        ijksdl/ijksdl_container.h
        ijksdl/ijksdl_egl.c
        ijksdl/ijksdl_egl.h
        ijksdl/ijksdl_endian.h
        ijksdl/ijksdl_error.c
        ijksdl/ijksdl_error.h
        ijksdl/ijksdl_fourcc.h
        ijksdl/ijksdl_gles2.h
        ijksdl/ijksdl_inc_internal.h
        ijksdl/ijksdl_log.h
        ijksdl/ijksdl_misc.h
        ijksdl/ijksdl_mutex.c
        ijksdl/ijksdl_mutex.h
        ijksdl/ijksdl_stdinc.c
        ijksdl/ijksdl_stdinc.h
        ijksdl/ijksdl_thread.c
        ijksdl/ijksdl_thread.h
        ijksdl/ijksdl_timer.c
        ijksdl/ijksdl_timer.h
        ijksdl/ijksdl_video.h
        ijksdl/ijksdl_vout.c
        ijksdl/ijksdl_vout.h
        ijksdl/ijksdl_vout_internal.h
        ijkyuv/include/libyuv/basic_types.h
        ijkyuv/include/libyuv/compare.h
        ijkyuv/include/libyuv/convert.h
        ijkyuv/include/libyuv/convert_argb.h
        ijkyuv/include/libyuv/convert_from.h
        ijkyuv/include/libyuv/convert_from_argb.h
        ijkyuv/include/libyuv/cpu_id.h
        ijkyuv/include/libyuv/format_conversion.h
        ijkyuv/include/libyuv/mjpeg_decoder.h
        ijkyuv/include/libyuv/planar_functions.h
        ijkyuv/include/libyuv/rotate.h
        ijkyuv/include/libyuv/rotate_argb.h
        ijkyuv/include/libyuv/row.h
        ijkyuv/include/libyuv/scale.h
        ijkyuv/include/libyuv/scale_argb.h
        ijkyuv/include/libyuv/scale_row.h
        ijkyuv/include/libyuv/version.h
        ijkyuv/include/libyuv/video_common.h
        ijkyuv/include/libyuv.h
        ijkyuv/source/compare.cc
        ijkyuv/source/compare_common.cc
        ijkyuv/source/compare_neon.cc
        ijkyuv/source/compare_neon64.cc
        ijkyuv/source/compare_posix.cc
        ijkyuv/source/compare_win.cc
        ijkyuv/source/convert.cc
        ijkyuv/source/convert_argb.cc
        ijkyuv/source/convert_from.cc
        ijkyuv/source/convert_from_argb.cc
        ijkyuv/source/convert_jpeg.cc
        ijkyuv/source/convert_to_argb.cc
        ijkyuv/source/convert_to_i420.cc
        ijkyuv/source/cpu_id.cc
        ijkyuv/source/format_conversion.cc
        ijkyuv/source/mjpeg_decoder.cc
        ijkyuv/source/mjpeg_validate.cc
        ijkyuv/source/planar_functions.cc
        ijkyuv/source/rotate.cc
        ijkyuv/source/rotate_argb.cc
        ijkyuv/source/rotate_mips.cc
        ijkyuv/source/rotate_neon.cc
        ijkyuv/source/rotate_neon64.cc
        ijkyuv/source/row_any.cc
        ijkyuv/source/row_common.cc
        ijkyuv/source/row_mips.cc
        ijkyuv/source/row_neon.cc
        ijkyuv/source/row_neon64.cc
        ijkyuv/source/row_posix.cc
        ijkyuv/source/row_win.cc
        ijkyuv/source/scale.cc
        ijkyuv/source/scale_argb.cc
        ijkyuv/source/scale_common.cc
        ijkyuv/source/scale_mips.cc
        ijkyuv/source/scale_neon.cc
        ijkyuv/source/scale_neon64.cc
        ijkyuv/source/scale_posix.cc
        ijkyuv/source/scale_win.cc
        ijkyuv/source/video_common.cc
        ijkyuv/unit_test/basictypes_test.cc
        ijkyuv/unit_test/compare_test.cc
        ijkyuv/unit_test/convert_test.cc
        ijkyuv/unit_test/cpu_test.cc
        ijkyuv/unit_test/math_test.cc
        ijkyuv/unit_test/planar_test.cc
        ijkyuv/unit_test/rotate_argb_test.cc
        ijkyuv/unit_test/rotate_test.cc
        ijkyuv/unit_test/scale_argb_test.cc
        ijkyuv/unit_test/scale_test.cc
        ijkyuv/unit_test/unit_test.cc
        ijkyuv/unit_test/unit_test.h
        ijkyuv/unit_test/version_test.cc
        ijkyuv/unit_test/video_common_test.cc
        ijkyuv/util/compare.cc
        ijkyuv/util/convert.cc
        ijkyuv/util/cpuid.c
        ijkyuv/util/psnr.cc
        ijkyuv/util/psnr.h
        ijkyuv/util/psnr_main.cc
        ijkyuv/util/ssim.cc
        ijkyuv/util/ssim.h ijkplayer/ijkutil.c ijkplayer/ijkutil.h ijkplayer/ffplay_format_def.h)

add_executable(ijkmedia ${SOURCE_FILES})